# proto-crdt

./: .gitignore  Makefile  README.md
examples/monotonic_counter/: go.mod  go.sum  main.go  service.proto
examples/monotonic_counter/pb/: service.pb.go  service_grpc.pb.go
examples/monotonic_counter/pb/pb/: service.pb.go
examples/shopping_cart/: go.mod  go.sum  main.go  service.proto
examples/shopping_cart/pb/: service.pb.go  service_grpc.pb.go
go/: go.mod  go.sum
go/g_counter/: g_counter.go  g_counter_test.go
go/g_set/: g_set.go  g_set_test.go
go/or_set/: or_set.go  or_set_test.go
go/pb/v1/: 2p_set.pb.go  g_counter.pb.go  g_set.pb.go  or_set.pb.go  pn_counter.pb.go
go/pn_counter/: pn_counter.go  pn_counter_test.go
go/two_phase_set/: two_phase_set.go  two_phase_set_test.go
proto/v1/: 2p_set.proto  g_counter.proto  g_set.proto  or_set.proto  pn_counter.proto
rust/: Cargo.toml  build.rs
rust/src/: g_counter.rs  g_set.rs  lib.rs  or_set.rs  pn_counter.rs  two_phase_set.rs
