[package]
name = "proto-crdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
prost = "0.9.0"
prost-types = "0.9.0"
bytes = "1.1.0"

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

[build-dependencies]
prost-build = { version = "0.9.0" }